fix color contrast

--- a/assets/scss/navigation/_navigation.scss
+++ b/assets/scss/navigation/_navigation.scss
@@ -3,7 +3,7 @@
 }
 
 .nav-container {
-    background: $primary;
+    background-color: #f9f9f9;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -29,10 +29,10 @@
     }
 
     a.logo {
-        color: $white;
+        color: $primary;
         text-decoration: none;
         text-transform: uppercase;
-        font-weight: 400;
+        font-weight: 700;
         line-height: 0;
         display: flex;
         align-items: center;
@@ -67,7 +67,7 @@
             a {
                 padding: 8px 12px;
                 border-radius: 50px;
-                background-color: rgba(255, 255, 255, .1);
+                background-color: $primary;
                 transition: all 0.2s ease;
 
                 &:hover {
@@ -85,6 +85,7 @@
     font-size: 1.2rem;
     margin: auto;
     line-height: 0;
+    color: $primary;
 }
 
 .sticky {
@@ -112,7 +113,7 @@
     z-index: 99999999999999;
     top: 0;
     right: 0;
-    background-color: $primary;
+    background-color: #f9f9f9;
     overflow-x: hidden;
     transition: 0.5s;
 
@@ -126,7 +127,7 @@
     .close-button {
         font-size: 2.4rem;
         z-index: 1;
-        color: $white;
+        color: $primary;
         display: flex;
         justify-content: flex-end;
         padding: 0 20px;
@@ -147,7 +148,7 @@
             width: 100%;
 
             a {
-                color: $gray;
+                color: $primary;
                 text-decoration: none;
                 display: block;
                 border-left: 5px solid $secondary;
@@ -160,8 +161,8 @@
 
                 &:hover {
                     cursor: grab;
-                    border-left: 2px solid $gray;
-                    color: rgba(255, 255, 255, .6);
+                    border-left: 2px solid $secondary;
+                    color: $secondary;
                 }
 
                 &:active,
